--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -27,7 +27,10 @@
       <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
     </view>
   </view>
-
+  
+  <view class="map">
+    <map></map>
+  </view>
 
   <!-- 操作数据库 -->
   <!-- <view class="uploader">
