--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -14,6 +14,7 @@
     </view>
   </view> -->
 
+  <!-- 显示图片 -->
   <view class="list-item">
       <image class="myimage" src="{{upDateImagePath}}" mode="aspectFit"></image>
   </view>
@@ -27,9 +28,20 @@
       <image class="uploader-image" src="{{imgUrl}}" mode="aspectFit" bindtap="previewImg"></image>
     </view>
   </view>
-  
+  <!-- 地图 -->
+  <view class="btn-area">
+    <button bindtap="moveToLocation" class="page-body-button" type="primary">我的位置</button>
+  </view>
   <view class="map">
-    <map></map>
+     <map
+      id="myMap"
+      latitude="{{latitude}}"
+      longitude="{{longitude}}"
+      markers="{{markers}}"
+      style="width: 100%; height: 100%;"
+      scale='16'
+      show-location
+    ></map>
   </view>
 
   <!-- 操作数据库 -->
