--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -80,6 +80,11 @@ page {
   padding: 0 0 0 40rpx;
 }
 
+.map {
+  width: 100%;
+  height: 230px;
+}
+
 .tunnel-text {
   position: relative;
   color: #222;
